gccida/c3/clear_reload_reg_in_use
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4723:63: error: must use 'enum' tag to refer to type 'reload_type'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4723:81: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                                ^
                                                                                enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4786:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4869:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = ( ( unsigned int)( mode_class_0[v20] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4917:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = ( ( unsigned int)( mode_class_0[v29] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4958:41: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned int' of different size
v37 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v6, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                        ^~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4958:70: error: use of undeclared identifier 'xmm'
v37 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v6, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4960:23: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'unsigned long long' of different size
v39 = _mm_shuffle_pd( ( __m128d)v34, ( __m128d)xmm*(short *)0x68FC00, 2); 
                      ^~~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4761:52: note: expanded from macro '_mm_shuffle_pd'
  (__m128d)__builtin_ia32_shufpd((__v2df)(__m128d)(a), (__v2df)(__m128d)(b), \
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4960:48: error: use of undeclared identifier 'xmm'
v39 = _mm_shuffle_pd( ( __m128d)v34, ( __m128d)xmm*(short *)0x68FC00, 2); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4964:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'long long' of different size
v42 = ( __m128d)-1LL; 
      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4968:57: error: use of undeclared identifier 'xmm'
v57 = _mm_add_epi64( _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE00), v37); 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4969:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4971:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v59.m128d_f64[0] = si128.m128i_i64[0] << v57.m128i_i8[0]; 
             ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4971:38: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v59.m128d_f64[0] = si128.m128i_i64[0] << v57.m128i_i8[0]; 
                                ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4971:58: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v59.m128d_f64[0] = si128.m128i_i64[0] << v57.m128i_i8[0]; 
                                                      ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4972:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v57.m128i_i64[0] = si128.m128i_i64[0] << v37.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4972:25: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v57.m128i_i64[0] = si128.m128i_i64[0] << v37.m128i_i8[0]; 
                   ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4972:45: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v57.m128i_i64[0] = si128.m128i_i64[0] << v37.m128i_i8[0]; 
                                         ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/reload1.c:4974:4: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v60.m128d_f64[0] = *( double *)v57.m128i_i64; 
~~~^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_reload_reg_in_use/src/obj/reload1.o] Error 1
